[package]
name = "cfs"
description = "Complex FileSystem userspace libray"
license = "MIT"
homepage = "https://github.com/gnussy/cfs"
repository = "https://github.com/gnussy/cfs"
readme = "Readme.md"
documentation = "https://docs.rs/cfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
