[package]
name = "cfs"
description = "Complex FileSystem userspace library"
license = "MIT"
homepage = "https://github.com/gnussy/cfs"
repository = "https://github.com/gnussy/cfs"
readme = "Readme.md"
documentation = "https://docs.rs/cfs"
version = "0.1.0"
edition = "2021"

[dependencies]
deku = "0.16.0"
log = "0.4"
env_logger = "0.10"
